Bug 23362 - Fix DumpRenderTree for accelerated compositing
Summary: Fix DumpRenderTree for accelerated compositing
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: 528+ (Nightly build)
Hardware: Mac OS X 10.5
: P2 Normal
Assignee: Simon Fraser (smfr)
URL:
Keywords:
Depends on:
Blocks: 23359
  Show dependency treegraph
 
Reported: 2009-01-15 15:03 PST by Simon Fraser (smfr)
Modified: 2009-02-05 21:37 PST (History)
2 users (show)

See Also:


Attachments
Patch, changelog (2.26 KB, patch)
2009-02-05 21:15 PST, Simon Fraser (smfr)
mitz: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fraser (smfr) 2009-01-15 15:03:54 PST
DumpRenderTree needs a few minor changes to work with accelerated compositing.
Comment 1 Simon Fraser (smfr) 2009-02-05 21:15:02 PST
Created attachment 27377 [details]
Patch, changelog
Comment 2 mitz 2009-02-05 21:20:36 PST
Comment on attachment 27377 [details]
Patch, changelog

>  #import <WebKit/WebDocumentPrivate.h>
>  #import <WebKit/WebKit.h>
> +#import <WebKit/WebHTMLViewPrivate.h>

Please keep the headers in ASCII order.
r=me
Comment 3 Simon Fraser (smfr) 2009-02-05 21:37:32 PST
Committing to http://svn.webkit.org/repository/webkit/trunk ...
	M	WebKitTools/ChangeLog
	M	WebKitTools/DumpRenderTree/mac/PixelDumpSupportMac.mm
Committed r40707